Made the parser much nicer and modular, integrated Azure storage and database fully, removed credentials from Settings, now set by Azure

--- a/UTDScanner/packages.config
+++ b/UTDScanner/packages.config
@@ -3,4 +3,15 @@
   <package id="EasyHttp" version="1.6.58.0" targetFramework="net45" />
   <package id="iTextSharp" version="5.4.5" targetFramework="net45" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net45" />
+  <package id="Microsoft.Azure.Jobs" version="0.3.0-beta" targetFramework="net45" />
+  <package id="Microsoft.Azure.Jobs.Core" version="0.3.0-beta" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.Jobs" version="0.2.1-alpha2" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.Jobs.Host" version="0.2.1-alpha2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="4.2.0" targetFramework="net45" />
 </packages>
