--- a/UTDScanner Web/Web.config
+++ b/UTDScanner Web/Web.config
@@ -37,6 +37,10 @@
   </system.webServer>
   <appSettings>
     <add key="webPages:Enabled" value="false" />
+    <add key="OAuthAccessToken" value=""/>
+    <add key="BufferTwitterId" value=""/>
+    <add key="DatabaseConnectionString" value="Server=localhost;Database=utdscanner;Trusted_Connection=True;"/>
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true;"/>
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
