--- a/UTDScanner Web/UTDScanner Web.csproj
+++ b/UTDScanner Web/UTDScanner Web.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\styles.css" />
     <Content Include="Properties\WebJobs.xml" />
     <Content Include="Content\robots.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
