Added opengraph information to incidents pages, Facebook to home page

--- a/UTDScanner Web/Web.config
+++ b/UTDScanner Web/Web.config
@@ -39,8 +39,9 @@
     <add key="webPages:Enabled" value="false" />
     <add key="OAuthAccessToken" value=""/>
     <add key="BufferTwitterId" value=""/>
-    <add key="DatabaseConnectionString" value="Server=localhost;Database=utdscanner;Trusted_Connection=True;"/>
+    <add key="DatabaseConnectionString" value="Server=localhost;Database=utdscanner_db;Trusted_Connection=True;"/>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true;"/>
+    <add key="BufferFacebookId" value=""/>
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
