Convert web site to non-Azure environment

--- a/UTDScanner Web/Web.config
+++ b/UTDScanner Web/Web.config
@@ -35,12 +35,7 @@
     </httpHandlers></system.web>
   
   <appSettings>
-    
-    <add key="OAuthAccessToken" value="" />
-    <add key="BufferTwitterId" value="" />
-    <add key="DatabaseConnectionString" value="Server=localhost;Database=utdscanner_db;Trusted_Connection=True;" />
-    <add key="StorageConnectionString" value="UseDevelopmentStorage=true;" />
-    <add key="BufferFacebookId" value="" />
+    <add key="DatabaseConnectionString" value="" />
   <add key="webPages:Enabled" value="false" /></appSettings>
   
   <runtime>
