Remove Azure related code

--- a/UTDScanner Web/Web.config
+++ b/UTDScanner Web/Web.config
@@ -35,7 +35,7 @@
     </httpHandlers></system.web>
   
   <appSettings>
-    <add key="DatabaseConnectionString" value="" />
+    <add key="DatabaseConnectionString" value="Server=astra-sql;Database=utdscanner;Trusted_Connection=True;" />
   <add key="webPages:Enabled" value="false" /></appSettings>
   
   <runtime>
