--- a/UTDScanner/App.config
+++ b/UTDScanner/App.config
@@ -8,8 +8,7 @@
     <appSettings>
       <add key="OAuthAccessToken" value=""/>
       <add key="BufferTwitterId" value=""/>
-      <add key="DatabaseConnectionString" value="Server=localhost;Database=utdscanner_db;Trusted_Connection=True;"/>
-      <add key="StorageConnectionString" value="UseDevelopmentStorage=true;"/>
+      <add key="DatabaseConnectionString" value=""/>
       <add key="BufferFacebookId" value=""/>
     </appSettings>
   <runtime>
